# C-game

./: .gitmodules  CMakeLists.txt  Makefile  main.c  readme.md  todo.md
engine/: location.c  location.h  window.c  window.h
src/: main.c
src/files/: todo.md
src/main/: main.c  window.c
